Preamble and build system upgrade

--- a/2019_20/PPS/homework-1/homework.tex
+++ b/2019_20/PPS/homework-1/homework.tex
@@ -11,7 +11,7 @@
 Claim: Let $P$ and $Q$ be statements. Then $P\Rightarrow Q\equiv \bar{Q}\Rightarrow \bar{P}$. (Where $\equiv$ means equivalent.)\\
 Proof:
 \begin{align*}
-  P\Rightarrow Q\equiv\lneg{P}\vee Q\equiv \lneg{\lneg{Q}}\vee \lneg{P}\equiv\lneg{Q}\Rightarrow\lneg{P}.\:\square
+  P\Rightarrow Q\equiv\overline{P}\vee Q\equiv \overline{\overline{Q}}\vee \overline{P}\equiv\overline{Q}\Rightarrow\overline{P}.\:\square
 \end{align*}
 \section*{Question 2}
 Claim: Let $n$ be an integer such that $n^2$ is even. Then $n$ is even.\\
