--- a/2019_20/PPS/homework-4/homework.tex
+++ b/2019_20/PPS/homework-4/homework.tex
@@ -11,7 +11,7 @@
 \emph{Claim.} Let $n\geq 2$ be an integer. Then the period of the decimal expression for the rational number $\frac{1}{n}$ is at most $n-1$.
 \begin{proof}
   This is very similar proof of \emph{Lemma 8.4/Corollary 8.5} in the notes.\\
-  Let be an integer $n\geq 2$. Then we can write $x=\nicefrac{1}{n}$. Each step of the long division algorithm $1\lneg{)n.000...}$ returns remainders in $[1,n]$.\\
+  Let be an integer $n\geq 2$. Then we can write $x=\nicefrac{1}{n}$. Each step of the long division algorithm $1\overline{)n.000...}$ returns remainders in $[1,n]$.\\
   Further, let $x=qr+q$, i.e. $x$ divided by $q$ is $r$ with remainder $q$. Then
   \begin{align*}
     x = qr+q = q(r+1)+0
