--- a/2019_20/PPS/notes/notes.tex
+++ b/2019_20/PPS/notes/notes.tex
@@ -12,7 +12,7 @@
 \pagebreak
 \section{Logic}
 \begin{theorem}
-    If $A$ and $B$ are statements, then $A\Rightarrow B\equiv \lneg{A}\vee B$.
+    If $A$ and $B$ are statements, then $A\Rightarrow B\equiv \overline{A}\vee B$.
 \end{theorem}
 \section{The Real Line}
 \begin{definition}
@@ -302,7 +302,7 @@
 \begin{theorem}
     If $x\geq 0$ is rational, then it has a periodic decimal expansion, that is,
     \begin{align*}
-        x=a_0.a_1a_2\cdots a_k\lneg{b_1b_2\cdots b_l}.
+        x=a_0.a_1a_2\cdots a_k\overline{b_1b_2\cdots b_l}.
     \end{align*}
 \end{theorem}
 \begin{definition}
@@ -357,8 +357,8 @@
 \begin{theorem}
     For all $u,v\in\C$:
     \begin{itemize}
-        \item $\lneg{u+v}=\lneg{u}+\lneg{v}$.
-        \item $\lneg{uv}=\lneg{u}\cdot\lneg{v}$.
+        \item $\overline{u+v}=\overline{u}+\overline{v}$.
+        \item $\overline{uv}=\overline{u}\cdot\overline{v}$.
         \item $|uv|=|u|\cdot|v|$.
     \end{itemize}
 \end{theorem}
