--- a/2021_22/HANA/notes/notes.tex
+++ b/2021_22/HANA/notes/notes.tex
@@ -671,12 +671,12 @@
 \begin{definition}[Notes 5.2]
     For two functions $f,g\in L^2([a,b])$ we define the \emph{inner product} by 
     \begin{align*}
-        \lra{f,g} = \int_a^b f(x)\lneg{g(x)}dx.
+        \lra{f,g} = \int_a^b f(x)\overline{g(x)}dx.
     \end{align*}
 \end{definition}
 
 \begin{theorem}[Cauchy-Schwarz inequality; Notes 5.1]
-    Let $f,g\in L^2([a,b])$. Then the function $x\mapsto f(x)\lneg{g(x)}$ is Lebesgue
+    Let $f,g\in L^2([a,b])$. Then the function $x\mapsto f(x)\overline{g(x)}$ is Lebesgue
     integrable and we have
     \begin{align*}
         \abs{\lra{f,g}}\leq \vabs f_2\vabs g_2.
