INT: Week 3 section titles

--- a/2021_22/INT/notes/notes.tex
+++ b/2021_22/INT/notes/notes.tex
@@ -238,4 +238,8 @@
     If $p$ is prime then $(p-1)!\equiv -1 \mod p$. 
 \end{theorem}
 
+\section{Chinese remainder theorem}
+
+\section{Eulers theorem}
+
 \end{document}
