INT: Fix heading

--- a/2021_22/INT/notes/notes.tex
+++ b/2021_22/INT/notes/notes.tex
@@ -3,7 +3,7 @@
 \usepackage{enumitem}
 \begin{document}
 \mkthmstwounified
-\title{Honours Algebra (SEM6)}
+\title{Introduction to Number Theory (SEM6)}
 \author{Franz Miltz}
 \maketitle
 \tableofcontents
